--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   background-color: #a67B5B; /* coffee background */
   color: #000000;
   line-height: 1.6;
@@ -36,6 +36,7 @@ nav ul {
   justify-content: center;
   list-style: none;
   margin-top: 10px;
+  font-size: 1.2rem;
 }
 
 nav ul li {
@@ -110,7 +111,7 @@ section h2 {
 section p {
   text-align: center;
   color: #000000;
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 
 /* About Me Section */
@@ -121,6 +122,7 @@ section p {
   list-style: none;
   padding: 0;
   margin-top: 20px;
+  font-size: 1.2rem;
 }
 
 #about ul li {
@@ -151,6 +153,12 @@ section p {
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
+.project:hover{
+  transform: translateY(-10px);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
 .project img {
   width: 100%;
   height: auto;
@@ -158,12 +166,14 @@ section p {
 }
 
 .project h3 {
+  font-size: 25px;
   color: #000000;
   margin-top: 10px;
 }
 
 .project p {
-  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
   color: #000000;
 }
 
@@ -201,6 +211,24 @@ section p {
 
 #contact a:hover {
   text-decoration: underline;
+}
+
+.spacer{
+  height: 60px;
+}
+
+.social_media{
+  font-size: 1.1rem;
+}
+
+.social_media a {
+  color: #fff1dd;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.social_media a:hover {
+  color: #ffe2bf;
 }
 
 form {
@@ -241,7 +269,7 @@ footer {
   color: #fff0e0;
   text-align: center;
   padding: 20px;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
 }
 
 /* Responsive Design */
